--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,10 +21,10 @@
 		// "rootDir": "src",
 		// "sourceMap": true,
 
-		// /* AND if you're building for a library: */
+		/* AND if you're building for a library: */
 		// "declaration": true,
 
-		// /* AND if you're building for a library in a monorepo: */
+		/* AND if you're building for a library in a monorepo: */
 		// "declarationMap": true,
 
 		// other options
