--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,8 @@ jobs:
       - name: Install dependencies
         run: bun install
 
+      - name: Install tsup
+        run: bun install tsup
+
       - name: Run CI
         run: bun run ci
